--- a/src/app/home/nodes/node-details/node-details.component.html
+++ b/src/app/home/nodes/node-details/node-details.component.html
@@ -9,14 +9,14 @@
 <div class="d-flex flex-column w-100 h-100 position-relative bg-light-gray">
     <div class="wrapper">
         <div class="w-100 position-relative px-4 py-5">
-            <odp-basic-info hideLogo="true" [(name)]="node.name" [(description)]="node.description"
-                [hideLogo]="true" [edit]="edit">
+            <odp-basic-info hideLogo="true" [(name)]="node.name" [(description)]="node.description" [hideLogo]="true"
+                [edit]="edit">
                 <div class="d-flex align-items-end align-self-start">
-                    <button *ngIf="hasPermission('PMPN') && edit.status" type="button"
-                        class="btn btn-white border mr-3" (click)="deleteNode()">
+                    <button *ngIf="hasPermission('PMPN') && edit.status" type="button" class="btn btn-white border mr-3"
+                        (click)="deleteNode()">
                         <span class="dsi dsi-trash"></span>
                     </button>
-                   
+
                     <button class="btn btn-white border btn-min-width mr-3" routerLink="../">
                         <span>Cancel</span>
                     </button>
@@ -25,22 +25,25 @@
                             [disabled]="node.name === 'Default DB Node' || node.name === 'Default File Node'">
                             <span>Edit</span>
                         </button>
-                        <button *ngIf="edit.status" [disabled]="!node.name" class="btn btn-primary btn-min-width" (click)="saveNode()">
+                        <button *ngIf="edit.status" [disabled]="!node.name" class="btn btn-primary btn-min-width"
+                            (click)="saveNode()">
                             <span>Save</span>
                         </button>
                     </ng-container>
                 </div>
             </odp-basic-info>
         </div>
-        <div class="d-flex flex-column px-4 pb-4" >
-            <div class="d-flex flex-column w-100 h-100 bg-white rounded border p-4" >
-                <odp-user-node [edit]="edit" [options]="api" [dataStructure]="dataStructure" *ngIf="nodeType === 'USER'"></odp-user-node>
+        <div class="d-flex flex-column px-4 pb-4">
+            <div class="d-flex flex-column w-100 h-100 bg-white rounded border p-4">
+                <odp-user-node [edit]="edit" [options]="api" [dataStructure]="dataStructure"
+                    *ngIf="nodeType === 'USER'"></odp-user-node>
 
-                <odp-event-node [edit]="edit" [nodeDetails]="node" *ngIf="nodeType === 'EVENT  && node.name'" (onChangeData)="onChangeData($event)"></odp-event-node>
+                <odp-event-node [edit]="edit" [nodeDetails]="node" *ngIf="nodeType === 'EVENT  && node.name'"
+                    (onChangeData)="onChangeData($event)"></odp-event-node>
 
-              <odp-system-node [edit]="edit" [nodeDetails]="node" *ngIf="nodeType === 'SYSTEM' && node.name" (onChangeData)="onChangeData($event)"></odp-system-node>
+                <odp-system-node [edit]="edit" [nodeDetails]="node" *ngIf="nodeType === 'SYSTEM' && node.name"
+                    (onChangeData)="onChangeData($event)"></odp-system-node>
             </div>
-           
         </div>
     </div>
 
