--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
@@ -2,7 +2,7 @@
     <g class="node-block" [style]="'transform: translate('+currNode.coordinates.x+'px,'+ currNode.coordinates.y+'px)'"
         class="hover no-outline " [attr.data-id]="currNode._id" [tabIndex]="index" (keydown.delete)="deletePath()">
         <g [class.active]="isSelected" [attr.data-id]="currNode._id">
-            <rect x="0" y="-18" width="120" height="24" rx="4" (click)="openProperties($event)"
+            <rect x="0" y="-18" width="140" height="24" rx="4" (click)="openProperties($event)"
                 [attr.data-id]="currNode._id" class="id-holder" />
             <text x="10" y="-5" text-anchor="start" (click)="openProperties($event)" [attr.data-id]="currNode._id"
                 class="id-holder">{{nodeType}}</text>
@@ -30,7 +30,15 @@
                 class="node-icon font-18 fw-500 dsi dsi-api-reciever" [attr.data-id]="currNode._id"></span>
             <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='API' && !isInputNode"
                 class="node-icon font-18 fw-500 dsi dsi-invoke-api" [attr.data-id]="currNode._id"></span>
+            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='API_XML' && !isInputNode"
+                class="node-icon font-18 fw-500 dsi dsi-invoke-api" [attr.data-id]="currNode._id"></span>
+            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='API_MULTIPART' && !isInputNode"
+                class="node-icon font-18 fw-500 dsi dsi-invoke-api" [attr.data-id]="currNode._id"></span>
             <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='FILE'"
+                class="node-icon font-18 fw-500 dsi dsi-file" [attr.data-id]="currNode._id"></span>
+            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='FILE_READ'"
+                class="node-icon font-18 fw-500 dsi dsi-file" [attr.data-id]="currNode._id"></span>
+            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='FILE_WRITE'"
                 class="node-icon font-18 fw-500 dsi dsi-file" [attr.data-id]="currNode._id"></span>
             <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='TIMER'"
                 class="node-icon font-18 fw-500 dsi dsi-clock" [attr.data-id]="currNode._id"></span>
@@ -62,6 +70,16 @@
                 class="node-icon font-18 fw-500 dsi dsi-file read" [attr.data-id]="currNode._id"></span>
             <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='FILE_WRITE'"
                 class="node-icon font-18 fw-500 dsi dsi-file write" [attr.data-id]="currNode._id"></span>
+            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='CONVERT_JSON_JSON'"
+                class="node-icon font-18 fw-500 dsi dsi-refresh text-secondary" [attr.data-id]="currNode._id"></span>
+            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='CONVERT_JSON_XML'"
+                class="node-icon font-18 fw-500 dsi dsi-refresh text-accent" [attr.data-id]="currNode._id"></span>
+            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='CONVERT_XML_JSON'"
+                class="node-icon font-18 fw-500 dsi dsi-refresh text-primary" [attr.data-id]="currNode._id"></span>
+            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='CONVERT_JSON_CSV'"
+                class="node-icon font-18 fw-500 dsi dsi-refresh text-success" [attr.data-id]="currNode._id"></span>
+            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='CONVERT_CSV_JSON'"
+                class="node-icon font-18 fw-500 dsi dsi-refresh text-dark" [attr.data-id]="currNode._id"></span>
         </foreignObject>
     </g>
     <g *ngFor="let p of successPaths;let i=index">
